extended description of the section about considering obstacles

--- a/routing.tex
+++ b/routing.tex
@@ -163,10 +163,12 @@ Sometimes it is also necessary to go above an obstacle, which is on a layer belo
 	\label{fig:router_as_far_as_necessary_above}
 \end{figure}
 
-Last but no least, it is also possible to switch to the neighboured layers. For modules the obstacle cannot be crossed this way, as they are obstacles at every layer. But if for example the obstacle is just another route a layer switch may solve the problem.
+Last but no least, it is also possible to switch to the neighboured layers. For modules the obstacle cannot be crossed this way, as they are obstacles at every layer. But if for example the obstacle is just another route a layer switch may solve the problem. In soee cases it is even reasonable to force a layer switch when it is currently not possible, because for instance another route is too close. In this case I try to make one small step, which is just big enough to fulfill all design rules (especially the notch rule) and switch the layer at this new point.
+
+All this possibilities to find a way to the target must combined clever, otherwise the performance becomes very bad. Therefore it makes sense to, for instance, prefer the steps into good directions. I choose the bad directions only if the shortest possible connection with only steps into good directions at the current point is bigger than 10\% of the manhattan distance to the target. This ensures that too long routes can be avoided and still results are created fast enough.
 
 \subsubsection{Avoid Collisions}
-To avoid collisions I take the preferred directions for every layer into account. This information is again stored in the technology file and describes if a layer should be used for horizontal or vertical routes. This reduces the possibility of collisions very efficiently and results in less complex layouts.
+To avoid collisions I take the preferred directions for every layer into account. This information is again stored in the technology file and describes if a layer should be used for horizontal or vertical routes. This reduces the possibility of collisions very efficiently and results in less complex layouts. Last but not least it also improves the performance of the router significantly.
 
 \subsubsection{Symmetric Routes}
 In manually created layouts an usual way to route symmetric elements is to create them optically symmetric. This optical symmetry gives the designer an easy way to create symmetry. But the really important part about routing symmetries is to match the parasitics. The resistance of the route is for sure matched for the symmetric routes through an optical symmetry, but the capacitive couplings are obeyed in most cases. Therefore, I concentrated on the resistance. To also consider the capacities it would have been necessary to create all routes at the same time. Only with such an approach I can evaluate the capacitive parasitics, otherwise I would have never known what influence routes that were created afterwards will have. As I have chosen to create the routes one by one I cannot consider the capacities for the symmetries.
