--- a/introduction.tex
+++ b/introduction.tex
@@ -6,7 +6,7 @@ The actually last missing step will be the integration of the already developed 
 
 As we already have a fast and reliable placer, called Plantage, I have implemented the routing into this tool. The main results of this thesis are:
 \begin{itemize}
-\item I have implemented a line expansion router, which creates, in most cases, design rule clean routes\footnote{\label{foot:1}In the cases where the layout is not design rule clean it is usually easy to fix the problem manually. For instance, in special cases the minimum notch rule may be harmed, but then the gap can just be filled up.} and considers symmetries.
+\item I have implemented a line expansion router, which creates, in most cases, design rule clean routes and considers symmetries.
 \item Based on the previous router I have implemented an extension of the line expansion router, which tries to reduce the parasitics.
 \item As it isn't sure which one will fit best to the hierarchical placer it is easy to replace the router with a different implementation.
 \end{itemize}
