fixed paragraph of simulation results

--- a/results.tex
+++ b/results.tex
@@ -21,7 +21,7 @@ To show also the results of a layout with a symmetried I have prepared one simpl
 \end{figure}
 
 \section{Simulation Results}
-To determine how well the extended line expansion router reduces the parasitics I have done some simulation on two layouts, which differ only in the routes. I compare all the results of the resulting amplifier with those simulation results, where no parasitics were backpropagated.
+To determine how well the extended line expansion router reduces the parasitics I have done some simulation on two layouts, which differ mainly in the routes, the placement is nearly equally. I compare all the results of the resulting amplifier with those simulation results, where no parasitics were backpropagated.
 
 MISSING
 
