--- a/results.tex
+++ b/results.tex
@@ -11,7 +11,7 @@ For the second one, the extend line expansion router, it becomes a lot more diff
 	\label{fig:miller_amplifier_routed_line_expansion_router}
 \end{figure}
 
-To show also the results of a layout with a symmetried I have prepared one simple example which contains only three modules \nref{fig:symmetry_routed}. Two of them form a pair of a symmetry and the other one is a single module in this symmetry. In the layout can be seen that the two connections between the symmetric modules are connected nearly symmetric the third module. The maximum allowed difference in resistance is 5\%, which seems to be hold by both connections. One of them is optical quite unsymmetric connected, but it starts on both ends on POLY. Therefore, the resistance of the whole connection is dominated by those two small parts.
+To show also the results of a layout with a symmetry I have prepared one simple example which contains only three modules \nref{fig:symmetry_routed}. Two of them form a pair of a symmetry and the other one is a single module in this symmetry. In the layout can be seen that the two connections between the symmetric modules are connected nearly symmetric the third module. The maximum allowed difference in resistance is 5\%, which seems to be hold by both connections. One of them is optical quite unsymmetric connected, but it starts on both ends on POLY. Therefore, the resistance of the whole connection is dominated by those two small parts.
 
 \begin{figure}
 	\centering
@@ -19,11 +19,6 @@ To show also the results of a layout with a symmetried I have prepared one simpl
   	\caption{routed layout of a symmetry}
 	\label{fig:symmetry_routed}
 \end{figure}
-
-\section{Simulation Results}
-To determine how well the extended line expansion router reduces the parasitics I have done some simulation on two layouts, which differ mainly in the routes, the placement is nearly equally. I compare all the results of the resulting amplifier with those simulation results, where no parasitics were backpropagated.
-
-MISSING
 
 \section{Conclusion}
 The results above show that the layouts created by plantage are at least feasible. Additionally, they also consider several constraints for analog circuits. The results are for sure not yet perfect, but this wasn't the aim of this thesis. The really main point was to implement the routing and make it easy to replace the algorithm later, as it is not sure which solution will be the best for the hierarchical placer. This can be done now easily, it is only necessary to inherit from the class Router.
