removed list of tables

--- a/results.tex
+++ b/results.tex
@@ -32,7 +32,7 @@ The results above show that the layouts created by plantage are at least feasibl
 
 Finally, I was able to reach all the targets claimed in the introduction:
 \begin{itemize}
-\item I have implemented a line expansion router, which creates, in most cases \footnote{In the cases where the layout is not design rule clean it is usually easy to fix the problem manually. For instance, in special cases the minimum notch rule may be harmed, but then the gap can just be filled up.}, design rule clean routes and considers symmetries \footnote{For capacities the ICFBInterface does not provide enough information about the additional guard ring, therefore it can not be considered}.
+\item I have implemented a line expansion router, which creates, in most cases \footnote{In the cases where the layout is not design rule clean it is usually easy to fix the problem manually. For instance, in special cases the minimum notch rule may be harmed, but then the gap can just be filled up.}, design rule clean routes \footnote{For capacities the ICFBInterface does not provide enough information about the additional guard ring, therefore it can not be considered} and considers symmetries.
 \item Based on the previous router I have implemented an extension of the line expansion router, which tries to reduce the parasitics.
 \item As it isn't sure which one will fit best to the hierarchical placer it is easy to replace the router with a different implementation.
 \end{itemize}
